--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,17 +45,27 @@ services:
       django-admin startproject ${DJANGO_APP_NAME} || echo "Pass django-admin startproject ${DJANGO_APP_NAME} "  &&
       gunicorn ${DJANGO_APP_NAME}.wsgi:application --chdir /code/${DJANGO_APP_NAME} -w 2 -b :${DJANGO_PORT} ${GUNICORN_CMD_ARGS}'
     ports:
-#     for develop
+      #     for develop
       - ${DJANGO_OUTSIDE_PORT}:${DJANGO_PORT}
       - ${DJANGO_DEBUG_PORT}:${DJANGO_DEBUG_PORT}
-#     for production
-#       - ${DJANGO_PORT}
+    #     for production
+    #       - ${DJANGO_
 
     depends_on:
       - mariadb
     volumes:
       - ./django_data/src:/code
     restart: always
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin:latest
+    ports:
+      - 9999:80
+    environment:
+      - PMA_ARBITRARY=1
+      - PMA_HOST=mariadb
+    depends_on:
+      - mariadb
 
 volumes:
   mariadb_data:
