--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
     volumes:
       - ./django_data/src/static:/static
       - ./django_data/src/media:/media
+      - ./nginx_data/conf.d:/etc/nginx/conf.d
     depends_on:
       - python-django
     restart: always
