add dj-rest-auth, inprove model

--- a/django_data/requirements.txt
+++ b/django_data/requirements.txt
@@ -5,8 +5,10 @@ django-cors-headers
 django-bootstrap4
 django-allauth
 django-filter
-dj-rest-auth
-# django-rest-allauth
+# dj-rest-auth[with_social]
+djangorestframework-simplejwt
+django-rest-allauth
+
 
 # DB
 pymysql
