--- a/django_data/requirements.txt
+++ b/django_data/requirements.txt
@@ -5,9 +5,9 @@ django-cors-headers
 django-bootstrap4
 django-allauth
 django-filter
-# dj-rest-auth[with_social]
+dj-rest-auth[with_social]
 djangorestframework-simplejwt
-django-rest-allauth
+# django-rest-allauth
 
 
 # DB
