--- a/nginx-data/Dockerfile
+++ b/nginx-data/Dockerfile
@@ -4,6 +4,7 @@ ARG APP_PORT
 ARG LISTEN_PORT
 
 RUN rm -rf /etc/nginx/conf.d/default.conf &&\
+    rm -rf /etc/nginx/conf.d/nginx.conf &&\
     touch /etc/nginx/conf.d/default.conf &&\
     echo "                                                                                      \
             proxy_cache_path /etc/nginx/cache levels=1:2 keys_zone=${APP_NAME}_cache:128m;      \   
