--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.4'
 
 services:
-  mariadb:
+  mariadb-bikehub:
     image: 'mariadb:10.0.33'
     command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci
     environment:
