--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.4'
 
 services:
-  mariadb-bikehub:
+  mariadb:
     image: 'mariadb:10.0.33'
     command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci
     environment:
@@ -13,7 +13,6 @@ services:
       - TZ=${TZ}
     volumes:
       - './mariadb-data:/var/lib/mysql'
-    container_name: mariadb-${DJANGO_APP_NAME}
     restart: always
 
   nginx:
@@ -38,7 +37,6 @@ services:
       - ./nginx-unit-data/src/media:/media
     depends_on:
       - nginx-unit
-    container_name: nginx-${DJANGO_APP_NAME}
     restart: always
 
   phpmyadmin:
@@ -77,7 +75,6 @@ services:
       - ./nginx-unit-data/init-scripts:/init-scripts
       - ./nginx-unit-data/log/unit.log:/var/log/unit.log
       - ./nginx-unit-data/config:/docker-entrypoint.d/
-    container_name: nginx-unit-${DJANGO_APP_NAME}
     restart: always
 
 volumes:
