add allauth script

--- a/.env.sample
+++ b/.env.sample
@@ -4,7 +4,7 @@ TZ=Asia/Tokyo
 ######################Nginx-Unit's Settings######################
 DJANGO_PORT=8080
 DJANGO_OUTSIDE_PORT=8080
-DJANGO_APP_NAME=example
+DJANGO_APP_NAME=bikehub
 
 ########################Domain Settings########################
 # This is for 
