--- a/nginx-unit-data/requirements.txt
+++ b/nginx-unit-data/requirements.txt
@@ -8,7 +8,7 @@ django-filter
 dj-rest-auth[with_social]
 djangorestframework-simplejwt
 # django-rest-allauth
-
+djangorestframework-api-key == 2. *
 
 # DB
 pymysql
