--- a/nginx-unit-data/requirements.txt
+++ b/nginx-unit-data/requirements.txt
@@ -9,6 +9,7 @@ dj-rest-auth[with_social]
 djangorestframework-simplejwt
 # django-rest-allauth
 djangorestframework-api-key == 2.0.0
+django-cookies-samesite
 
 # DB
 pymysql
