--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
         APP_NAME: ${DJANGO_APP_NAME}
         APP_PORT: ${DJANGO_PORT}
         LISTEN_PORT: ${NGINX_OUTSIDE_PORT}
+        HOST_NAME: ${NGINX_HOST_NAME}
     environment:
       - VIRTUAL_HOST=${VIRTUAL_HOST}
       - LETSENCRYPT_HOST=${LETSENCRYPT_HOST}
