--- a/nginx-unit-data/requirements.txt
+++ b/nginx-unit-data/requirements.txt
@@ -10,6 +10,7 @@ djangorestframework-simplejwt
 # django-rest-allauth
 djangorestframework-api-key == 2.0.0
 django-cookies-samesite
+django-environ
 
 # DB
 pymysql
