Fix template issu and admin site issue

--- a/nginx-unit-data/requirements.txt
+++ b/nginx-unit-data/requirements.txt
@@ -11,6 +11,7 @@ djangorestframework-simplejwt
 djangorestframework-api-key == 2.0.0
 django-cookies-samesite
 django-environ
+django-bootstrap4
 
 # DB
 pymysql
