--- a/nginx-unit-data/src/bikehub/.vscode/settings.json
+++ b/nginx-unit-data/src/bikehub/.vscode/settings.json
@@ -2,5 +2,6 @@
     "python.linting.pylintArgs": [
         "--load-plugins",
         "pylint_django"
-    ]
+    ],
+    "python.pythonPath": "/usr/bin/python3"
 }
