--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -59,9 +59,9 @@ services:
       - LETSENCRYPT_EMAIL=${LETSENCRYPT_EMAIL_2}
       - TZ=${TZ}
     ports:
-      - ${NGINX_OUTSIDE_PORT_2}:${NGINX_PORT_2}
+      # - ${NGINX_OUTSIDE_PORT_2}:${NGINX_PORT_2}
       # IF you use "https://github.com/evertramos/docker-compose-letsencrypt-nginx-proxy-companion , comment out below and use ports settings (Because don't need expose out side port)"
-      # - ${NGINX_PORT}
+      - ${NGINX_PORT_2}
     volumes:
       - ./nginx-unit-data/src/static:/static
       - ./nginx-unit-data/src/media:/media
