add: app youtube

--- a/nginx-unit-data/requirements.txt
+++ b/nginx-unit-data/requirements.txt
@@ -54,7 +54,7 @@ tweepy
 #daphne
 facebook-sdk
 pysummarization
-
+google-api-python-client
 # /usr/lib/mecab
 # /usr/share/doc/mecab
 # /usr/share/mecab
