--- a/nginx-unit-data/requirements.txt
+++ b/nginx-unit-data/requirements.txt
@@ -56,6 +56,7 @@ facebook-sdk
 pysummarization
 google-api-python-client
 oauth2client
+selenium
 # /usr/lib/mecab
 # /usr/share/doc/mecab
 # /usr/share/mecab
