--- a/nginx-unit-data/requirements.txt
+++ b/nginx-unit-data/requirements.txt
@@ -57,6 +57,7 @@ pysummarization
 google-api-python-client
 oauth2client
 selenium
+stripe
 # /usr/lib/mecab
 # /usr/share/doc/mecab
 # /usr/share/mecab
